fix : 게시글 상세 조회시 응답 구조